--- a/Sadanghaeng/Sadanghaeng/Base.lproj/Main.storyboard
+++ b/Sadanghaeng/Sadanghaeng/Base.lproj/Main.storyboard
@@ -263,85 +263,86 @@
                                 <rect key="frame" x="-25" y="-30" width="97" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
-                                <variation key="widthClass=compact" misplaced="YES">
-                                    <rect key="frame" x="16" y="98" width="351" height="30"/>
-                                </variation>
                             </textField>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="게시판 쓸 내용" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="vES-7g-Wmn">
+                                <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                                <color key="backgroundColor" red="1" green="0.93725490199999995" blue="0.63921568630000003" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="175" id="5Sk-Th-0Hz"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences" enablesReturnKeyAutomatically="YES"/>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="5Sk-Th-0Hz"/>
+                                    </mask>
+                                </variation>
+                                <variation key="widthClass=compact">
+                                    <mask key="constraints">
+                                        <include reference="5Sk-Th-0Hz"/>
+                                    </mask>
+                                </variation>
+                            </textView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="S7h-Zt-4jn">
                                 <rect key="frame" x="-23" y="-15" width="46" height="30"/>
                                 <state key="normal" title="작성 완료">
                                     <color key="titleColor" red="0.91764705879999997" green="0.33333333329999998" blue="0.27058823529999998" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
-                                <variation key="widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="159" y="340" width="56" height="30"/>
+                                <variation key="widthClass=compact" misplaced="YES">
+                                    <rect key="frame" x="20" y="374" width="335" height="30"/>
                                 </variation>
                                 <connections>
                                     <action selector="saveButtonTapped:" destination="p0g-px-yAB" eventType="touchUpInside" id="PMT-h2-Ex2"/>
                                     <segue destination="Ovy-bR-dhy" kind="show" id="UJm-WL-Aii"/>
                                 </connections>
                             </button>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="게시판 쓸 내용" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="vES-7g-Wmn">
-                                <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
-                                <color key="backgroundColor" red="1" green="0.93725490199999995" blue="0.63921568630000003" alpha="1" colorSpace="calibratedRGB"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences" enablesReturnKeyAutomatically="YES"/>
-                                <variation key="widthClass=compact" misplaced="YES">
-                                    <rect key="frame" x="16" y="157" width="343" height="175"/>
-                                </variation>
-                            </textView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="vES-7g-Wmn" firstAttribute="centerX" secondItem="ddw-JL-wi9" secondAttribute="centerX" id="GeE-KA-aYg">
-                                <variation key="widthClass=compact" constant="-4"/>
-                            </constraint>
-                            <constraint firstItem="vES-7g-Wmn" firstAttribute="top" secondItem="ddw-JL-wi9" secondAttribute="bottom" constant="26" id="M8b-kl-bcd">
-                                <variation key="widthClass=compact" constant="29"/>
-                            </constraint>
-                            <constraint firstAttribute="leadingMargin" secondItem="ddw-JL-wi9" secondAttribute="leading" id="Y8M-HG-CdH"/>
-                            <constraint firstItem="ddw-JL-wi9" firstAttribute="top" secondItem="htz-HH-Pm1" secondAttribute="bottom" constant="37" id="Z5b-cw-iM7">
-                                <variation key="widthClass=compact" constant="34"/>
-                            </constraint>
-                            <constraint firstAttribute="trailingMargin" secondItem="ddw-JL-wi9" secondAttribute="trailing" id="hID-OB-9Hf">
-                                <variation key="widthClass=compact" constant="-8"/>
-                            </constraint>
-                            <constraint firstItem="bfp-fU-Eex" firstAttribute="top" secondItem="vES-7g-Wmn" secondAttribute="bottom" constant="379" id="hhG-vh-xIv">
-                                <variation key="widthClass=compact" constant="335"/>
-                            </constraint>
-                            <constraint firstItem="vES-7g-Wmn" firstAttribute="leading" secondItem="PF9-Qh-M0g" secondAttribute="leadingMargin" constant="4" id="kKM-WQ-kC2">
-                                <variation key="widthClass=compact" constant="0.0"/>
-                            </constraint>
+                            <constraint firstItem="ddw-JL-wi9" firstAttribute="leading" secondItem="PF9-Qh-M0g" secondAttribute="leadingMargin" constant="4" id="8Sn-UW-JXb"/>
+                            <constraint firstItem="vES-7g-Wmn" firstAttribute="leading" secondItem="ddw-JL-wi9" secondAttribute="leading" id="NBy-6w-gG0"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="S7h-Zt-4jn" secondAttribute="trailing" id="ObP-Rs-vaH"/>
+                            <constraint firstItem="ddw-JL-wi9" firstAttribute="trailing" secondItem="PF9-Qh-M0g" secondAttribute="trailingMargin" id="ULV-qq-8hs"/>
+                            <constraint firstItem="ddw-JL-wi9" firstAttribute="top" secondItem="htz-HH-Pm1" secondAttribute="bottom" constant="88" id="cF1-eR-yz4"/>
+                            <constraint firstItem="vES-7g-Wmn" firstAttribute="top" secondItem="ddw-JL-wi9" secondAttribute="bottom" constant="19" id="pDe-wa-k3k"/>
+                            <constraint firstAttribute="leadingMargin" secondItem="S7h-Zt-4jn" secondAttribute="leading" id="qrY-A0-L02"/>
+                            <constraint firstItem="S7h-Zt-4jn" firstAttribute="top" secondItem="vES-7g-Wmn" secondAttribute="bottom" constant="42" id="r7n-lF-5Ps"/>
+                            <constraint firstItem="vES-7g-Wmn" firstAttribute="trailing" secondItem="ddw-JL-wi9" secondAttribute="trailing" id="zmb-BV-8HX"/>
                         </constraints>
                         <variation key="default">
                             <mask key="subviews">
                                 <exclude reference="ddw-JL-wi9"/>
-                                <exclude reference="S7h-Zt-4jn"/>
                                 <exclude reference="vES-7g-Wmn"/>
+                                <exclude reference="S7h-Zt-4jn"/>
                             </mask>
                             <mask key="constraints">
-                                <exclude reference="hhG-vh-xIv"/>
-                                <exclude reference="Y8M-HG-CdH"/>
-                                <exclude reference="Z5b-cw-iM7"/>
-                                <exclude reference="hID-OB-9Hf"/>
-                                <exclude reference="GeE-KA-aYg"/>
-                                <exclude reference="M8b-kl-bcd"/>
-                                <exclude reference="kKM-WQ-kC2"/>
+                                <exclude reference="8Sn-UW-JXb"/>
+                                <exclude reference="ULV-qq-8hs"/>
+                                <exclude reference="cF1-eR-yz4"/>
+                                <exclude reference="NBy-6w-gG0"/>
+                                <exclude reference="pDe-wa-k3k"/>
+                                <exclude reference="zmb-BV-8HX"/>
+                                <exclude reference="ObP-Rs-vaH"/>
+                                <exclude reference="qrY-A0-L02"/>
+                                <exclude reference="r7n-lF-5Ps"/>
                             </mask>
                         </variation>
                         <variation key="widthClass=compact">
                             <mask key="subviews">
                                 <include reference="ddw-JL-wi9"/>
-                                <include reference="S7h-Zt-4jn"/>
                                 <include reference="vES-7g-Wmn"/>
+                                <include reference="S7h-Zt-4jn"/>
                             </mask>
                             <mask key="constraints">
-                                <include reference="hhG-vh-xIv"/>
-                                <include reference="Y8M-HG-CdH"/>
-                                <include reference="Z5b-cw-iM7"/>
-                                <include reference="hID-OB-9Hf"/>
-                                <include reference="GeE-KA-aYg"/>
-                                <include reference="M8b-kl-bcd"/>
-                                <include reference="kKM-WQ-kC2"/>
+                                <include reference="8Sn-UW-JXb"/>
+                                <include reference="ULV-qq-8hs"/>
+                                <include reference="cF1-eR-yz4"/>
+                                <include reference="NBy-6w-gG0"/>
+                                <include reference="pDe-wa-k3k"/>
+                                <include reference="zmb-BV-8HX"/>
+                                <include reference="ObP-Rs-vaH"/>
+                                <include reference="qrY-A0-L02"/>
+                                <include reference="r7n-lF-5Ps"/>
                             </mask>
                         </variation>
                     </view>
